--- a/assets/css/partials/_homePage.scss
+++ b/assets/css/partials/_homePage.scss
@@ -401,7 +401,13 @@
     margin-top: 3%;
   }
   .carousel{
-    width: 40%;
+    width: 80%;
+    margin: 0 auto 5% auto;
+    padding-top: 15%;
+    img{
+      width: 80%;
+      height: 25em;
+    }
   }
   #homePageProjects{
     width: 87%;
