--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -239,9 +239,13 @@ body {
     width: 0;
     height: 0; } }
 .headerWrapper {
+  position: absolute;
   letter-spacing: 1px;
   width: 100%;
-  box-shadow: 1px 3px 15px rgba(48, 48, 48, 0.4); }
+  margin: 0 auto 5% auto;
+  padding-bottom: 2%;
+  box-shadow: 0px 3px 15px rgba(48, 48, 48, 0.4);
+  overflow-x: hidden; }
   .headerWrapper a {
     text-decoration: none;
     cursor: pointer; }
@@ -250,15 +254,17 @@ body {
     font-size: 1.2em;
     position: relative;
     margin: 2% 5% 0 -15%;
-    left: 83%;
+    left: 80%;
     vertical-align: top;
     display: inline-block; }
     .headerWrapper .linkButtons #contactBtn {
       color: white;
       background-color: #E2492F;
       padding: 1% 2%;
-      border-radius: 1px;
+      border-radius: 2px;
       margin-right: 1%; }
+    .headerWrapper .linkButtons #phoneNumber {
+      color: #A4A4A4; }
     .headerWrapper .linkButtons a {
       padding-right: .5em; }
   .headerWrapper .nameLinks {
@@ -595,6 +601,13 @@ footer {
   #homePageWrapper .aboutMeLink {
     color: #E2492F;
     margin-top: 3%; }
+  #homePageWrapper .carousel {
+    width: 80%;
+    margin: 0 auto 5% auto;
+    padding-top: 15%; }
+    #homePageWrapper .carousel img {
+      width: 80%;
+      height: 25em; }
   #homePageWrapper #homePageProjects {
     width: 87%;
     margin: auto;
